--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "psycopg2-binary (>=2.9.10,<3.0.0)",
     "python-decouple (>=3.8,<4.0)",
     "dotenv (>=0.9.9,<0.10.0)",
-    "drf-spectacular (>=0.28.0,<0.29.0)"
+    "drf-spectacular (>=0.28.0,<0.29.0)",
+    "django-cors-headers (>=4.7.0,<5.0.0)"
 ]
 
 
