--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.11
+FROM python:3.13
 
 # Установка Poetry
 RUN curl -sSL https://install.python-poetry.org | python3 - && \
@@ -8,7 +8,7 @@ WORKDIR /app
 
 COPY pyproject.toml poetry.lock* ./
 RUN poetry config virtualenvs.create false \
- && poetry install --no-interaction --no-ansi
+ && poetry install --no-root --no-interaction --no-ansi
 
 COPY . .
 
