--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,20 @@
 services:
-  web:
+  backend:
     build: ./backend
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - ./backend:/app
     ports:
       - "8000:8000"
     depends_on:
       - db
-    env_file: ./backend/.env
-    volumes:
-      - .:/app
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: postgres
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_HOST: db
+      POSTGRES_PORT: 5432
 
   db:
     image: postgres
@@ -17,6 +24,9 @@ services:
       POSTGRES_PASSWORD: postgres
     volumes:
       - pg_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+    restart: unless-stopped
 
 volumes:
   pg_data:
